--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         target= "_blank"
         rel="noopener noreferrer" >
         <span class="fa-brands fa-instagram"></span>
-        Our Impact</a>
+        @carsforkidsus</a>
     </h4>
 </section>
 
@@ -185,4 +185,5 @@ document.querySelectorAll(".nav-links a").forEach(link => {
 </script>
 
 </body>
+
 </html>
